--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "jsdoc-plugin-typescript",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Plugin to make TypeScript's JSDoc type annotations work with JSDoc",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["jsdoc", "typescript"],
+  "keywords": [
+    "jsdoc",
+    "typescript"
+  ],
   "license": "BSD-2-Clause",
   "repository": {
     "type": "git",
