Use index directly

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "typescript"
   ],
   "license": "BSD-2-Clause",
+  "peerDependencies": {
+    "jsdoc": "3.6.0"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/openlayers/jsdoc-plugin-typescript.git"
