--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "license": "BSD-2-Clause",
   "peerDependencies": {
-    "jsdoc": "3.6.0"
+    "jsdoc": ">=3.6.0"
   },
   "repository": {
     "type": "git",
