strict type checking with typesctipt, parsing enums and template parameters

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   ],
   "license": "BSD-2-Clause",
   "peerDependencies": {
-    "jsdoc": ">=3.6.0"
+    "jsdoc": ">=3.6.0",
+    "typescript": "3.*"
   },
   "repository": {
     "type": "git",
