--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsdoc-plugin-typescript",
-  "version": "2.0.4",
+  "version": "2.0.5",
   "description": "Plugin to make TypeScript's JSDoc type annotations work with JSDoc",
   "main": "index.js",
   "scripts": {
@@ -17,5 +17,8 @@
   "repository": {
     "type": "git",
     "url": "git://github.com/openlayers/jsdoc-plugin-typescript.git"
+  },
+  "dependencies": {
+    "string.prototype.matchall": "^4.0.0"
   }
 }
