--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
   },
   "devDependencies": {
     "@types/geojson": "^7946.0.10",
-    "@types/proj4": "^2.5.2",
     "deep-diff-pizza": "^1.0.2",
     "eslint": "^9.16.0",
     "eslint-config-openlayers": "^20.0.0",
     "fs-extra": "^11.1.0",
-    "jsdoc": "^4.0.2"
+    "jsdoc": "^4.0.2",
+    "proj4": "^2.19.7"
   }
 }
